# ai-research-report-assistant

./: .gitignore  README.md  pyproject.toml
src/agents/: llm_client.py  planner_agent.py  report_agent.py  research_agent.py  reviewer_agent.py  writer_agent.py
src/app/: main.py  orchestrator.py
src/autonomous_multi_agent_research_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/config/: models.json  settings.py
src/memory/: chroma_store.py  memory_manager.py  sqlite_catalog.py
src/reporting/: markdown_export.py  pdf_export.py
src/reporting/templates/: report_md_template.jinja
src/schemas/: chunks.py  plan.py  report.py  review.py  sources.py
src/tools/: citation_builder.py  vector_retrieval.py  web_extract.py  web_fetch.py  web_search_duckduckgo.py
src/ui/: streamlit_app.py
src/utils/: logging.py  retry.py
tests/: test_hashing.py  test_research_chunking.py  test_sqlite_catalog.py
