[project]
name = "autonomous-multi-agent-research-assistant"
version = "0.1.0"
description = "Autonomous multi-agent RAG research and report assistant."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "chromadb>=0.5.0",
  "jinja2>=3.1.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "requests>=2.31.0",
  "sentence-transformers>=2.7.0"
]

[project.optional-dependencies]
pdf = ["weasyprint>=62.0"]
ui = ["streamlit>=1.34.0"]

[project.scripts]
maira = "src.app.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
